--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "1.0.0-next.48",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/typography": "^0.5.8",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
