--- a/package.json
+++ b/package.json
@@ -16,25 +16,26 @@
 		"@sveltejs/adapter-static": "1.0.5",
 		"@sveltejs/kit": "1.3.6",
 		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.50.0",
-		"@typescript-eslint/parser": "^5.50.0",
-		"autoprefixer": "^10.4.13",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"autoprefixer": "^10.4.7",
 		"dayjs": "^1.11.7",
-		"eslint": "^8.33.0",
+		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.3",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.55.1",
 		"svelte-body": "^1.3.6",
 		"svelte-check": "^2.10.3",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.4",
+		"tailwindcss": "^3.2.6",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.0.4"
+		"vite": "^4.1.1"
 	},
 	"type": "module"
 }
